<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/menu_theme" android:orderInCategory="0" android:title="@string/menu_theme" android:icon="@android:drawable/ic_menu_view"></item>
    <item android:id="@+id/menu_add" android:orderInCategory="1" android:title="@string/menu_add" android:icon="@android:drawable/ic_menu_add"></item>
    <item android:id="@+id/menu_update_list" android:orderInCategory="2" android:title="@string/menu_update_list" android:icon="@android:drawable/ic_menu_upload"></item>
    <item android:id="@+id/menu_update" android:orderInCategory="3" android:title="@string/menu_update" android:icon="@android:drawable/ic_menu_upload"></item>
    <item android:id="@+id/menu_feedback" android:orderInCategory="4" android:title="@string/menu_feedback" android:icon="@android:drawable/ic_menu_send"></item>
    <item android:id="@+id/menu_about" android:orderInCategory="5" android:title="@string/menu_about" android:icon="@android:drawable/ic_menu_info_details"></item>
    <item android:id="@+id/menu_quit" android:orderInCategory="6" android:title="@string/menu_quit" android:icon="@android:drawable/ic_menu_close_clear_cancel"></item>
</menu>